chore: allow for python 3.7 support and add required packages

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,10 @@ disable = [
     "too-many-arguments",
     "too-few-public-methods",
     "no-else-return",
+    "arguments-differ",
+    "too-many-ancestors",
     "duplicate-code",
+    "attribute-defined-outside-init",
     "too-many-branches",
     "redefined-builtin",
     "dangerous-default-value",
@@ -21,6 +24,13 @@ max-line-length = 88
 
 [[tool.mypy.overrides]]
 ignore_missing_imports = true
+module = [
+    'src.*',
+    'ml_collections',
+    'tifffile',
+    'pandas',
+    'sklearn.model_selection',
+]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
